[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/Main/Main.gd" type="Script" id=1]
[ext_resource path="res://src/Levels/WaterTemple.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Levels/Sky_Tower.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Layers/StartScreen.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Layers/LoadingScreen.tscn" type="PackedScene" id=5]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="WaterTemple" parent="." instance=ExtResource( 2 )]
position = Vector2( -3820.91, -753.785 )

[node name="Sky_Tower" parent="." instance=ExtResource( 3 )]
position = Vector2( 1563.03, 873.479 )

[node name="StartScreen" parent="." instance=ExtResource( 4 )]

[node name="LoadingScreen" parent="." instance=ExtResource( 5 )]
[connection signal="start_game" from="StartScreen" to="." method="_on_StartScreen_start_game"]
